# cpp

./: .gitignore
c++/petcc_dados/dia1/: a.cpp
edb1/activity1/: CMakeLists.txt  README.md  answers.cpp
edb1/activity1/includes/: CMakeLists.txt  lib.cpp  lib.hpp
edb1/activity1/tests/: CMakeLists.txt  main.cpp
edb1/search_alg/: main.cpp
edb1/search_alg/lib/: print_res.hpp  search_alg.hpp
edb1/sort-alg/: sortl.hpp
lp1/: class_max_in_array.cpp  test.cpp
lp1/trabalho1/: 1018  1071  1087  1168  1186  1257  2253  bee1013.cpp  bee1015.cpp  bee1018.cpp  bee1042.cpp  bee1071.cpp  bee1087.cpp  bee1101.cpp  bee1140.cpp  bee1160.cpp  bee1168.cpp  bee1175.cpp  bee1176.cpp  bee1186.cpp  bee1187.cpp  bee1251.cpp  bee1257.cpp  bee1789.cpp  bee2253.cpp  bee2787.cpp  better_bee1251.cpp  notfin_bee1042.cpp  notfin_bee1140.cpp  notfin_bee1168.cpp  notfin_bee1789.cpp
lp1/trabalho2/: test.cpp  test2.cpp
lp1/trabalho2/projetograal/: CMakeLists.txt  README.md  author.md
lp1/trabalho2/projetograal/include/: graal.hpp
lp1/trabalho2/projetograal/tests/: CMakeLists.txt  main.cpp
lp1/trabalho2/projetograal/tm/: CMakeLists.txt
petcc_dados/dia1/: 2197  A.cpp  CD_2197.cpp  test.cpp
petcc_dados/dia2/: 1176  bee1176.cpp  isittriangle.cpp  issorted.cpp  polimorf_swap.cpp
petcc_dados/dia5/: A.cpp
training/: 1017  bee1017.cpp  bee3343.cpp  insertionsort_template.cpp
training/ConstStack/: cl_def.hpp  imp_cstack.hpp  imp_iters.hpp  main.cpp
training/beecrowd/: bee1019.cpp  bee1020.cpp  bee1047.cpp  bee1048.cpp  bee1049.cpp  bee2006.cpp
training/class_training/: CMakeLists.txt  main.cpp
training/class_training/lib/: CMakeLists.txt  rect.cpp  rect.hpp
training/learn_cmake/: CMakeLists.txt  main.cpp
training/learn_cmake/lib/: CMakeLists.txt  lib.cpp  lib.hpp
